--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pyasn1-modules==0.2.8
 pyparsing==2.4.7
 pytest==5.4.1
 python-dateutil==2.8.1
+python-dotenv==0.13.0
 pytz==2020.1
 requests==2.23.0
 requests-oauthlib==1.3.0
@@ -50,4 +51,5 @@ urllib3==1.25.9
 wcwidth==0.1.9
 Werkzeug==1.0.1
 wrapt==1.12.1
+xgboost==1.0.2
 zipp==3.1.0
