--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
 absl-py==0.9.0
 astor==0.8.1
+astunparse==1.6.3
 attrs==19.3.0
+bleach==3.1.5
 cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
 cycler==0.10.0
-gast==0.2.2
+gast==0.3.3
 google-auth==1.14.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.28.1
 h5py==2.10.0
+html5lib==1.0.1
 idna==2.9
 importlib-metadata==1.6.0
 joblib==0.14.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.2.0
-Markdown==3.2.1
+Markdown==3.2.2
 matplotlib==3.2.1
 more-itertools==8.2.0
 names==0.3.0
@@ -33,7 +36,7 @@ py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
-pytest==5.4.1
+pytest==5.4.2
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 pytz==2020.1
@@ -43,12 +46,14 @@ rsa==4.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 six==1.14.0
-tensorboard==2.1.1
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
 termcolor==1.1.0
 urllib3==1.25.9
 wcwidth==0.1.9
+webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
 xgboost==1.0.2
